Iniciando no css

--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="assets/css/styles.css" />
     <link rel="shortcut icon" href="assets/img/logo.jpg" type="image/x-icon" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
     <title>CineScape</title>
   </head>
   <body>
     <header>
       <div class="logo">
-        <a href=""><img src="assets/img/logo.jpg" alt="" /></a>
+        <a href=""><img src="assets/img/logo.jpg" alt="" class="mainlogo"/></a>
         <a
           href="https://github.com/diegocorredeira"
           title="Github link"
           target="_blank"
-          ><img src="assets/img/Octicons-mark-github.svg.png" alt=""
+          ><img src="assets/img/Octicons-mark-github.svg.png" class="git" alt=""
         /></a>
       </div>
       <form action="" id="form">
@@ -55,6 +55,9 @@
     >
     <span class="loader"></span>
     <script src="script.js"></script>
-    <script src="http://kit.fontawesome.com/f7a442f79b.js" crossorigin="anonymous"></script>
+    <script
+      src="http://kit.fontawesome.com/f7a442f79b.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
