corrigindo bug da pagina

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="pagination">
       <div class="page" id="prev">&#8656; Anterior</div>
       <div class="current" id="current">1</div>
-      <div class="page" id="prev"> Próxima &#8658;</div>
+      <div class="page" id="next"> Próxima &#8658;</div>
     </div>
     <a
       href="https://github.com/diegocorredeira"
