--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
     <div id="tags"></div>
     <div id="myNav" class="overlay">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav"
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
         >&times;</a
       >
 
