adicionando axios ao projeto

--- a/index.html
+++ b/index.html
@@ -54,10 +54,13 @@
       >Por Diego Corredeira</a
     >
     <span class="loader"></span>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="script.js"></script>
     <script
       src="http://kit.fontawesome.com/f7a442f79b.js"
+      
       crossorigin="anonymous"
     ></script>
+  
   </body>
 </html>
