--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <div class="logo">
-        <a href="index.html"><p class="mainlogo">CineScape ESTAMOS EM MANUTENÇÃO!</p></a>
+        <a href="index.html"><p class="mainlogo">CineScape</p></a>
         <a
           href="https://github.com/diegocorredeira"
           title="Github link"
